--- a/admission_online.html
+++ b/admission_online.html
@@ -118,8 +118,8 @@
     <section class="card">
       <h2>Merit List Generator</h2>
       <div class="row">
-        <label>Weight: GPA<input id="weightGPA" type="number" value="60" min="0" max="100" />%</label>
-        <label>Weight: Exam<input id="weightExam" type="number" value="40" min="0" max="100" />%</label>
+        <label>CGPA<input id="weightGPA" type="number" value="60" min="0" max="100" />%</label>
+        <label>Exam<input id="weightExam" type="number" value="40" min="0" max="100" />%</label>
         <button id="genMerit" class="btn primary">Generate Merit</button>
         <button id="exportMerit" class="btn">Export CSV</button>
       </div>
